--- a/index.html
+++ b/index.html
@@ -78,18 +78,20 @@
 
 
   <section class="section-two">
-    <div class="what-is-npm">
+    <!-- <div class="what-is-npm"> -->
       <div class="npm-info">
-       <h1>What is npm?</h1>
-       <p>Use npm to install, and distribuite code; manage dependencies in your projects; and share & receive feedback with others.</p>
+       <h1>What is npm?</h1> <br><br>
+       <p>Use npm to install, and distribuite code; manage dependencies in your projects; and share & receive feedback with others.</p> <br>
+       <form action="#" method="GET">
+        <input type="submit" value="Install npm">
+      </form>
       </div>
       <div class="install-npm">
-        <form action="#" method="GET">
-          <input type="submit" value="Install npm">
-        </form>
+        
       </div>
-    </div>
+    <!-- </div> -->
   </section>
+
   
   <section class="final-section">
     <div class="building-blocks">
